feat: add vertical poster upload functionality and update schemas (#884)
- Introduced a new endpoint `/poster-vertical` for uploading vertical event poster images to AWS S3, supporting PNG and JPG formats with a maximum size of 500 KB.
- Updated the Event schema to include `image_vertical` for storing the URL of the vertical poster.
- Enhanced the event creation and update routes to handle vertical image validation and storage.
- Modified the frontend to support vertical image uploads, including error handling and user interface updates for the new image input.
- Updated internationalization files to include labels and messages related to vertical images.
